Renamed my-interests component to interests. Fixed recommended-tag div so that it now covers the book div exactly.

--- a/src/app/recommend-books/search-results/search-results.component.css
+++ b/src/app/recommend-books/search-results/search-results.component.css
@@ -77,15 +77,13 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
   color:white;
   font-size: 1.2em;
   background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 9px 9px 0px 0px;
   height:100%;
   width: 100%;
-  z-index: 10;
+  z-index: 20;
   visibility: hidden;
 }
   
@@ -136,7 +134,7 @@ h3 {
   justify-content: center;
   position: absolute;
   text-align: center;
-  z-index: 50;
+  z-index: 20;
   font-size: 1.2em;
   border-radius: 9px 9px 0px 0px;
   height:100%;
